--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -2,26 +2,38 @@
 
 .card {
 	width: 24%; // 0,5% de espaço para cada lado
-	min-width: 240px;
-	background-color: global.$component-background-color;
-	border-radius: global.$radius;
-}
-
-.card--default--height {
-	height: 45vh;
-}
-
-.card--full--height {
 	height: 95vh;
+	min-width: 240px;
+	background-color: global.$foreground-color;
+	border-radius: global.$radius;
+	box-shadow: global.$box-shadow-200-small;
 }
 
-.card__title {
-	background-color: global.$header-background-color;
+.card__header {
+	width: 100%;
+	height: 5%;
+	max-height: 50px;
+
+	background-color: global.$primary-color-800;
 	border-top-left-radius: global.$radius;
 	border-top-right-radius: global.$radius;
-	padding: 5px 10px;
-	text-align: left;
-	font-size: 1.2rem;
+
+	padding: 0% 5%;
+
+	.header__title {
+		text-align: left;
+		font-size: 1.0rem;
+	}
+	
+	.header__icon {
+		color: global.$primary-font-color;
+	}
+}
+
+.card__content {
+	height: 95%;
+	border-bottom-left-radius: global.$radius;
+	border-bottom-right-radius: global.$radius;
 }
 
 .card__list {
