--- a/src/app/home.scss
+++ b/src/app/home.scss
@@ -17,7 +17,7 @@
 	height: 8%;
 	padding: 1% 0%;
 
-	border-bottom: 0.8px solid global.$primary-color-200--30op;
+	border-bottom: 0.8px solid global.$primary-color-light--30op;
 
 	.button {
 		margin: 0% 1%;
@@ -45,6 +45,6 @@
 		margin-bottom: 1%;
 		width: 80%;
 		text-align: center;
-		color: global.$primary-color-200;
+		color: global.$primary-color-light;
 	}
 }
