--- a/src/components/Buttons/globalButton.scss
+++ b/src/components/Buttons/globalButton.scss
@@ -4,11 +4,21 @@
 	height: 40px;
 	min-height: 40px;
 	width: 250px;
-	margin-top: 5px;
+	margin: 5px;
 	font-weight: bold;
 	font-size: small;
 	border-radius: 10px;
 	cursor: pointer;
+}
+
+.button:hover {
+	color: global.$primary-color-light;
+	background-color: global.$primary-color-light--30op;
+	border: global.$primary-color-light 1px solid;
+	box-shadow: global.$box-shadow--light--small;
+	outline: 1px solid global.$primary-color-light;
+	outline-offset: none;
+	transition: 150ms;
 }
 
 .button--small {
@@ -18,32 +28,13 @@
 }
 
 .button--filled {
-	color: $primary-color-800;
-	background-color: $primary-color-200;
-	border: $primary-color-200 1px solid;
-}
-
-.button--filled:hover {
-	color: $primary-color-200;
-	background-color: initial;
-	border: $primary-color-200 1px solid;
-	box-shadow: $box-shadow-200-small;
-	outline: 1px solid $primary-color-200;
-	outline-offset: none;
-	transition: 150ms;
+	color: global.$primary-color-dark;
+	background-color: global.$primary-color-light;
+	border: global.$primary-color-light 1px solid;
 }
 
 .button--outlined {
-	color: $primary-color-200;
+	color: global.$primary-color-light;
 	background-color: initial;
-	border: $primary-color-200 1px solid;
-}
-
-.button--outlined:hover {
-	outline: 1px solid $primary-color-200;
-	color: $primary-color-800;
-	background-color: $primary-color-200--30op;
-	box-shadow: $box-shadow-200-small;
-	outline-offset: none;
-	transition: 150ms;
+	border: global.$primary-color-light 1px solid;
 }
