--- a/src/components/PageContainer/pageContainer.scss
+++ b/src/components/PageContainer/pageContainer.scss
@@ -5,5 +5,13 @@
 	min-height: 100vh;
 
 	align-items: center;
+}
+
+.container--dashboard {
 	justify-content: space-between;
+}
+
+.container--default {
+	width: 100vw;
+	height: 100vh;
 }
