--- a/src/components/Menu/menu.scss
+++ b/src/components/Menu/menu.scss
@@ -1,4 +1,4 @@
-@use '../../styles/global.scss';
+@use '../../styles/variables.scss';
 
 .menu {
 	display: flex;
@@ -10,8 +10,8 @@
 	height: 8%;
 	padding: 1%;
 
-	background-color: global.$foreground-color;
-	border-bottom: 0.8px solid global.$primary-color-light--30op;
+	background-color: variables.$foreground-color;
+	border-bottom: 0.8px solid variables.$primary-color-light--30op;
 
 }
 
