--- a/src/components/SideBar/sideBar.scss
+++ b/src/components/SideBar/sideBar.scss
@@ -1,10 +1,10 @@
-@use '../../styles/global.scss';
+@use '../../styles/variables.scss';
 
 aside {
 	width: 15vw;
 	height: 100vh;
-	// box-shadow: global.$box-shadow--light--small;
-	border-right: 2px solid global.$primary-color-light--30op;
+	// box-shadow: variables.$box-shadow--light--small;
+	border-right: 2px solid variables.$primary-color-light--30op;
 	z-index: 10;
 	align-items: flex-start;
 	justify-content: flex-start
@@ -14,9 +14,9 @@ aside {
 	height: fit-content;
 	min-height: 8%;
 	padding: 5px 2px;
-	// border-bottom: 1px solid global.$primary-color-light--30op;
+	// border-bottom: 1px solid variables.$primary-color-light--30op;
 	text-align: center;
-	background-color: global.$primary-color-light;
+	background-color: variables.$primary-color-light;
 
 	.header__title {
 		font-size: 1.4rem;
