--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -24,7 +24,7 @@
 		text-align: left;
 		font-size: 1.0rem;
 	}
-	
+
 	.header__icon {
 		color: variables.$primary-font-color;
 	}
@@ -46,4 +46,107 @@
 .card__list__item {
 	height: 30px;
 	margin: 0 5px;
+}
+
+
+.listBoard {
+	width: 24%;
+	height: 95vh;
+	min-width: 240px;
+	background-color: variables.$foreground-color;
+	border-radius: variables.$radius;
+	box-shadow: variables.$box-shadow--light--small;
+
+	overflow-x: scroll;
+
+	header {
+		color: variables.$primary-font-color;
+		padding: 1% 2%;
+		margin-bottom: 1%;
+		box-shadow: variables.$box-shadow--intermediate--small;
+	}
+
+	header .header__title {
+		text-align: left;
+		font-size: 1.3rem;
+	}
+
+	header .header__icon {
+		cursor: pointer
+	}
+
+	header .header__icon:hover {
+		color: variables.$primary-color-light;
+	}
+
+	.listBoard__content {
+		flex: 1;
+		width: 100%;
+		padding: 0 1.5%;
+	}
+}
+
+.card__container {
+	align-items: flex-start;
+	justify-content: space-arounds;
+
+	background-color: rgba(0, 0, 0, 0.2);
+
+	width: 100%;
+	border: 1px solid variables.$primary-color-light--30op;
+	padding: 2%;
+	margin-bottom: 1%;
+	border-radius: variables.$radius--small;
+
+	.card__title {
+		text-align: left;
+		color: variables.$primary-font-color;
+		text-decoration: none;
+
+		width: 100%;
+		font-size: 1rem;
+		margin-bottom: 1%;
+		cursor: pointer;
+
+	}
+
+	p {
+		font-size: smaller;
+		color: variables.$placeholder-font-color;
+		margin-bottom: 1%;
+	}
+}
+
+.tag__container {
+	margin-top: 1%;
+	margin-bottom: 1%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+
+	width: 100%;
+	height: 100%;
+
+	padding: 1% 2%;
+
+	width: 30%;
+	min-width: fit-content;
+	height: fit-content;
+
+	border-radius: 15px;
+	border: solid 1.5px variables.$primary-color-light;
+
+	.tag__icon {
+		color: variables.$primary-color-light;
+		margin-right: 2%;
+		font-size: small;
+	}
+
+	.tag__title {
+		color: variables.$primary-color-light;
+		text-align: center;
+		vertical-align: middle;
+		font-size: small;
+	}
 }
