--- a/src/components/Card/card.scss
+++ b/src/components/Card/card.scss
@@ -1,54 +1,5 @@
 @use '../../styles/variables.scss';
 
-.card {
-	width: 24%;
-	height: 95vh;
-	min-width: 240px;
-	background-color: variables.$foreground-color;
-	border-radius: variables.$radius;
-	box-shadow: variables.$box-shadow--light--small;
-}
-
-.card__header {
-	width: 100%;
-	height: 5%;
-	max-height: 50px;
-
-	background-color: variables.$primary-color-dark;
-	border-top-left-radius: variables.$radius;
-	border-top-right-radius: variables.$radius;
-
-	padding: 0% 5%;
-
-	.header__title {
-		text-align: left;
-		font-size: 1.0rem;
-	}
-
-	.header__icon {
-		color: variables.$primary-font-color;
-	}
-}
-
-.card__content {
-	height: 95%;
-	border-bottom-left-radius: variables.$radius;
-	border-bottom-right-radius: variables.$radius;
-}
-
-.card__list {
-	flex: 1;
-	width: 100%;
-	text-decoration: none;
-	list-style: inside none;
-}
-
-.card__list__item {
-	height: 30px;
-	margin: 0 5px;
-}
-
-
 .listBoard {
 	width: 24%;
 	height: 95vh;
@@ -72,7 +23,8 @@
 	}
 
 	header .header__icon {
-		cursor: pointer
+		cursor: pointer;
+		color: variables.$placeholder-font-color;
 	}
 
 	header .header__icon:hover {
