fixing general components UI + locale

--- a/src/components/Form/globalForm.scss
+++ b/src/components/Form/globalForm.scss
@@ -160,8 +160,8 @@ select:focus {
 	max-width: 60%;
 }
 
-.form_container--full {
-	height: 100%;
+.form__container--full {
+	height: 95%;
 	max-height: 100%;
 	flex: 1;
 	max-width: 100%;
