--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,20 +2,20 @@ $page-background-color: #3E3B39;
 $foreground-color: #2B2828;
 $primary-font-color: #ffffff;
 $placeholder-font-color: rgba(255, 255, 255, 0.6);
+$disabled-background-color: rgb(101, 101, 101);
 
 $primary-color-light: #BE95C4;
 $primary-color-light--30op: #BE95C44d;
-$primary-color-intermediate: #9F86C0;
-$primary-color-intermediate--30op: #9F86C04d;
+$primary-color-light--15op: #be95c426;
 $primary-color-dark: #231942;
+$primary-color-dark--15op: #23194226;
 $primary-color-dark--30op: #2319424d;
 
 $box-shadow--light: 0px 0px 5px 3px $primary-color-light;
-$box-shadow--light--small: 1px 1px 2px 1px $primary-color-light;
-$box-shadow--intermediate: 0px 0px 5px 3px $primary-color-intermediate;
-$box-shadow--intermediate--small: 1px 1px 2px 1px $primary-color-intermediate;
+$box-shadow--light--small: 0px 0px 2px 1px $primary-color-light;
+$box-shadow--light--small--offset: 1px 1px 2px 1px $primary-color-light;
 $box-shadow--dark: 0px 0px 5px 3px $primary-color-dark;
-$box-shadow--dark--small: 1px 1px 2px 1px $primary-color-dark;
+$box-shadow--dark--small: 0px 0px 2px 1px $primary-color-dark;
 
 $radius: 10px;
 $radius--small: 8px;
