--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,5 @@
 $page-background-color: #3E3B39;
-$foreground-color: #2B2828;
+$foreground-color: #0000004b;
 $primary-font-color: #ffffff;
 $placeholder-font-color: rgba(255, 255, 255, 0.6);
 $disabled-background-color: rgb(101, 101, 101);
@@ -18,4 +18,3 @@ $box-shadow--dark: 0px 0px 5px 3px $primary-color-dark;
 $box-shadow--dark--small: 0px 0px 2px 1px $primary-color-dark;
 
 $radius: 10px;
-$radius--small: 8px;
