--- a/src/components/Messages/messages.scss
+++ b/src/components/Messages/messages.scss
@@ -1,15 +1,13 @@
 @use '../../styles/variables.scss';
 
 .message__container {
-	margin-top: 5%;
-
 	width: 100%;
 	height: 100%;
-	
+	padding: 2%;
 	flex: 1;
 
 	background-color: rgba(0, 0, 0, 0.2);
-	border-radius: variables.$radius--small;
+	border-radius: variables.$radius;
 }
 
 .message__content {
