fixing locale mapping + ui

--- a/src/components/Loading/loading.scss
+++ b/src/components/Loading/loading.scss
@@ -32,7 +32,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background-color: variables.$foreground-color;
+	background-color: none;
 }
 
 .circle-border {
