--- a/src/components/Loading/loading.scss
+++ b/src/components/Loading/loading.scss
@@ -1,12 +1,12 @@
 @use '../../styles/variables.scss';
 
 .loading__container {
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 
 	background-color: variables.$foreground-color;
 	box-shadow:  variables.$box-shadow--light;
-	border-radius: variables.$radius;
+	// border-radius: variables.$radius;
 
 	h1.loading__title {
 		width: 100%;
@@ -51,6 +51,6 @@
 .circle-core {
 	width: 100%;
 	height: 100%;
-	background-color: variables.$foreground-color;
+	background-color: #2c2a28;
 	border-radius: 50%;
 }
