--- a/src/components/Loading/loading.scss
+++ b/src/components/Loading/loading.scss
@@ -5,14 +5,60 @@
 	height: 100%;
 
 	background-color: variables.$foreground-color;
-	box-shadow:  variables.$box-shadow--light;
-	// border-radius: variables.$radius;
+	box-shadow: variables.$box-shadow--light;
 
 	h1.loading__title {
 		width: 100%;
 		text-align: center;
 		vertical-align: middle;
 		color: variables.$primary-color-light;
+	}
+}
+
+.partial-loading {
+	width: 200px;
+	height: 100px;
+	max-width: 100%;
+
+	background-color: variables.$foreground-color;
+	box-shadow: variables.$box-shadow--light;
+	border-radius: variables.$radius;
+
+	h1.loading__title {
+		width: 100%;
+		text-align: center;
+		vertical-align: middle;
+		color: variables.$primary-color-light;
+		font-size: smaller;
+	}
+
+	.spinner-box {
+		width: 50px;
+		height: 50px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: none;
+	}
+
+	.circle-border {
+		width: 50%;
+		height: 50%;
+		padding: 3px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		border-radius: 50%;
+		background: variables.$primary-color-light;
+		background: linear-gradient(0deg, #BE95C44b 33%, #BE95C4 100%);
+		animation: spin .8s linear 0s infinite;
+	}
+
+	.circle-core {
+		width: 100%;
+		height: 100%;
+		background-color: #2c2a28;
+		border-radius: 50%;
 	}
 }
 
